feat: simplify assert assertions