@@ -1,11 +1,9 @@
 package com.github.toastshaman.tinytypes.events.test.assertions;
 
-import static com.github.toastshaman.tinytypes.events.test.assertions.EventAssert.assertThatEvent;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import com.github.toastshaman.tinytypes.events.Event;
 import com.github.toastshaman.tinytypes.events.RecordingEvents;
-import java.util.function.Consumer;
 import org.assertj.core.api.AbstractAssert;
 import org.assertj.core.api.ListAssert;
 import org.assertj.core.api.ObjectAssert;
@@ -29,7 +27,7 @@ public final class RecordingEventsAssertions extends AbstractAssert<RecordingEve
         return findInstanceOf(type).isNotEmpty();
     }
 
-    public <T extends Event> EventAssert containsSingle(Class<T> type) {
+    public <T extends Event> ObjectAssert<Event> containsSingle(Class<T> type) {
         var events = actual.filterInstanceOf(type);
         if (events.isEmpty()) {
             failWithMessage("no event found matching %s".formatted(type.getSimpleName()));
@@ -37,17 +35,7 @@ public final class RecordingEventsAssertions extends AbstractAssert<RecordingEve
         if (events.size() > 1) {
             failWithMessage("more than one event found matching %s: %s".formatted(type.getSimpleName(), events));
         }
-        return assertThatEvent(events.get(0));
-    }
-
-    public <T extends Event> ObjectAssert<Event> containsSingleSatisfying(
-            Class<T> type, Consumer<EventAssert> assertions) {
-        return findInstanceOf(type).hasSize(1).first().satisfies(it -> assertions.accept(assertThatEvent(it)));
-    }
-
-    public <T extends Event> ListAssert<Event> containsSatisfying(
-            Class<T> type, Consumer<ListAssert<Event>> assertions) {
-        return findInstanceOf(type).satisfies(it -> assertions.accept(assertThat(it)));
+        return assertThat(events.getFirst());
     }
 
     public <T extends Event> ListAssert<Event> doesNotContain(Class<T> type) {
